# RAG_appliaction

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/AgentTab/: AgentTab.css  AgentTab.jsx
frontend/src/components/ChatTab/: ChatTab.css  ChatTab.jsx
frontend/src/components/EvaluatorTab/: EvaluatorTab.css  EvaluatorTab.jsx
frontend/src/components/IngestionTab/: IngestionTab.css  IngestionTab.jsx
frontend/src/components/Loader/: Loader.css  Loader.jsx
frontend/src/components/OrchestratorTab/: OrchestratorTab.css  OrchestratorTab.jsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.jsx
src/: config.py  main.py
src/api/: routes.py  services.py
src/rag/: agent.py  evaluation.py  generation.py  hf_loader.py  llm_client.py  loaders.py  multimodal_orchestrator.py  rerank.py  retrieval.py  vector_store.py
