[project]
name = "ai-friday-boiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "jq>=1.11.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "openpyxl>=3.1.5",
    "pinecone>=6.0.0",
    "pinecone-text>=0.11.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "rank-bm25>=0.2.2",
    "unstructured>=0.22.28",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.pyright]
extraPaths = ["."]
executionEnvironments = [
  { root = "." }
]
